;;;; -*- coding: utf-8; fill-column: 78 -*-
changes relative to sbcl-2.5.3:
  * bug fix: incorrect rounding when converting some bignums to floats.
  * bug fix: the second value of the truncation functions is more consistently
    computed for bignum floats.
  * platform support:
    ** save-lisp-and-die with :callable-exports can be used for sbcl.dll on
       Windows.
    ** Building with UCRT64 on Windows is now fully supported.
  * optimization: ROUND is faster for floats.

changes in sbcl-2.5.3 relative to sbcl-2.5.2:
  * enhancement: breakpoint debugger commands have been added.  Included is a
    stepper based on breakpoints requiring no extra instrumentation.  However,
    it still has less functionality than the existing single stepper.  See the
    new debugger manual section titled "Breakpoint Commands" for more
    information on the new commands.
  * minor incompatible change: the behaviour of :save-runtime-options has been
    restored to match the documentation.  (lp#2096995, reported by Zach Beane)
  * minor incompatible change: invoking CHANGE-CLASS from user code no longer
    grabs the CLOS world lock.  Callers must take responsibility for ordering
    execution of CHANGE-CLASS and any changes to the class hierarchy.
  * platform support:
    ** (CAS SAP) is implemented on ARM v8.1 directly with CAS instructions.
    ** on x86-64, list constructors emit more compact code sequences,
       particularly in the presence of multiple references to the same object.
    ** on x86 and x86-64, fix the stack overflow check to use signed
       comparisons.
    ** on Darwin/arm64 and Linux/x86-64, provide a restart to disable
       floating-point exceptions of the type signalled, and another to disable
       all floating-point exceptions.
  * bug fix: cycle detection in class precedence lists happens before adding
    classes to the direct subclasses of the parent.
  * bug fix: stack-allocated unaligned cons cells no longer cause errors in