@@ -28,6 +28,9 @@
 #include "genesis/symbol.h"
 
 #define REAL_LRA_SLOT 0
+#ifdef reg_LRA
+#define KNOWN_RETURN_P_SLOT 1
+#endif
 
 static void *compute_pc(lispobj code_obj, int pc_offset)
 {
@@ -166,8 +169,14 @@ void *handle_fun_end_breakpoint(os_context_t *context)
      * platforms should as well, but haven't been fixed yet. */
     *os_context_register_addr(context, reg_LRA) = lra;
 #else
-#ifdef reg_CODE
-    *os_context_register_addr(context, reg_CODE) = lra;
+#ifdef reg_LRA
+    /*
+     * With the known-return convention, we definitely do NOT want to
+     * mangle the CODE register because it isn't pointing to the bogus
+     * LRA but to the actual routine.
+     */
+    if (codeptr->constants[KNOWN_RETURN_P_SLOT] == NIL)
+        *os_context_register_addr(context, reg_CODE) = lra;
 #endif
 #endif
 
